Bug 494145 - Klipper: follow-up to #494031, editing the first item prevents it from being removed
Summary: Klipper: follow-up to #494031, editing the first item prevents it from being ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 6.1.90
Platform: Other Other
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-10-05 02:20 UTC by Kenneth Raplee
Modified: 2024-10-11 23:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kenneth Raplee 2024-10-05 02:20:55 UTC
SUMMARY
This is a follow-up report to bug #494031.

After applying and testing the fix, I found a different problem where after editing the first item, it can't be individually removed from history. However, other items in the history pop-up can be deleted, but not the first one.

There are two ways to get around it. Either:
1. Use the "Clear History" button.
2. Selecting an item that's not the first one which shifts first one to the second entry which then allows you to delete it.

STEPS TO REPRODUCE
1. Copy some text to Klipper, so there is at least one item in the history pop-up.
2. Edit the first item and save.
3. Click the trashcan button that removes it from history.

OBSERVED RESULT
It doesn't actuate the removal.

EXPECTED RESULT
Removes the first item from the list.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.1.90 (with patch applied from https://invent.kde.org/plasma/plasma-workspace/-/commit/35367681c1e6ec515bd31a3f3caee0ea48de1710)
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.3
Comment 1 Paul Worrall 2024-10-05 05:49:14 UTC
Confirmed (with same software versions)
Comment 2 Paul Worrall 2024-10-05 06:53:26 UTC
... I also just noticed that the edits to the first item are not saved when the save button is clicked
Comment 3 Nate Graham 2024-10-10 17:19:23 UTC
(In reply to Paul Worrall from comment #2)
> ... I also just noticed that the edits to the first item are not saved when
> the save button is clicked
That's Bug 494031, which is fixed in Plasma 6.1.

Can reproduce the bug described here.
Comment 4 Bug Janitor Service 2024-10-11 11:26:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4823
Comment 5 Fushan Wen 2024-10-11 14:41:25 UTC
Git commit 4bd073f16010a552fa7fcb1892643a0cbbbe6dc2 by Fushan Wen.
Committed on 11/10/2024 at 14:20.
Pushed by fusionfuture into branch 'master'.

klipper: fix unable to remove clip after editing

Emit dataChanged signal for uuid after editing, otherwise the uuid
in the model delegate is not updated aod the index from uuid is invalid.
FIXED-IN: 6.2.1

M  +6    -0    appiumtests/applets/clipboardtest.py
M  +1    -1    klipper/historymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/4bd073f16010a552fa7fcb1892643a0cbbbe6dc2
Comment 6 Fushan Wen 2024-10-11 23:55:12 UTC
Git commit 8ee0a5ea10b263c5f5d652e2edc047654144871b by Fushan Wen.
Committed on 11/10/2024 at 23:55.
Pushed by fusionfuture into branch 'Plasma/6.2'.

klipper: fix unable to remove clip after editing

Emit dataChanged signal for uuid after editing, otherwise the uuid
in the model delegate is not updated and the index from uuid is invalid.
FIXED-IN: 6.2.1

(cherry-picked from commit 4bd073f16010a552fa7fcb1892643a0cbbbe6dc2)

M  +1    -1    klipper/historymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8ee0a5ea10b263c5f5d652e2edc047654144871b