klipper: fix unable to remove clip after editing

Emit dataChanged signal for uuid after editing, otherwise the uuid
in the model delegate is not updated and the index from uuid is invalid.

BUG: 494145
FIXED-IN: 6.2.1

(cherry-picked from commit 4bd073f16010a552fa7fcb1892643a0cbbbe6dc2)